# SmartStudy

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
alembic/versions/: 3345a5d7b592_initial_schema.py
app/: config.py  main.py
app/agents/: ContextRefinementAgent.py  GenerationAgent.py  RetrievalAgent.py  ValidationAgent.py  mcq_utils.py  models.py  session_manager.py  utils.py
app/api/: deps.py
app/api/routes/: chat.py  evaluation.py  flashcards.py  history.py  notes.py
app/auth/: clerk.py
app/db/: crud.py  models.py
app/schemas/: requests.py  responses.py
app/services/: cache.py  generation.py
app/utils/: dataloader.py  scraper.py
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_security_events.py  a7b8c9d0e1f2_add_user_progress.py  b8c9d0e1f2a3_add_flashcard_reviews.py  c3d4e5f6a7b8_add_perf_indexes.py  c9d0e1f2a3b4_attempt_source_fields.py  d4e5f6a7b8c9_add_exam_questions.py  e5f6a7b8c9d0_exam_validation_fields.py  f6a7b8c9d0e1_add_jobs.py
backend/app/: config.py  logging_config.py  main.py
backend/app/agents/: ContextRefinementAgent.py  GenerationAgent.py  RetrievalAgent.py  ValidationAgent.py  base.py  chat.py  evaluation.py  flashcards.py  gemini_pool.py  mcq.py  notes.py  prompts.py  subject_rules.py  utils.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  auth.py  bookmarks.py  chat.py  evaluation.py  exam.py  flashcards.py  history.py  mcq.py  mistakes.py  notes.py  progress.py  ws.py
backend/app/auth/: google.py  tokens.py
backend/app/core/: curriculum_validation.py  exceptions.py
backend/app/db/: crud.py  database.py  models.py
backend/app/schemas/: requests.py  responses.py
backend/app/security/: audit.py  headers.py  input_sanitizer.py  output_sanitizer.py  rate_limiter.py
backend/app/services/: cache.py  generation.py  jobs.py  srs.py
backend/app/utils/: dataloader.py  enrich_questions.py  estimate_tokens.py
backend/scripts/: loadtest_queue.py  loadtest_ws.py
backend/tests/: conftest.py  factories.py  fixtures.py  test_analytics.py  test_flashcard_srs.py  test_mistakes.py  test_progress.py  test_to_letter.py
backend/tests/e2e/: test_chat_flow.py  test_evaluation_flow.py  test_flashcard_flow.py  test_mcq_flow.py  test_notes_flow.py
backend/tests/integration/: conftest.py  test_jobs.py
backend/tests/integration/api/: test_chat_route.py  test_context_generation.py  test_evaluation_route.py  test_flashcards_route.py  test_history_route.py  test_mcq_route.py  test_note_chat_route.py  test_ws_routes.py
backend/tests/integration/db/: test_crud_users.py
backend/tests/unit/agents/: test_mcq_topic.py  test_mcq_utils.py  test_notes_coverage.py  test_session_manager.py  test_subject_rules.py  test_utils.py  test_validation_agent.py
backend/tests/unit/services/: test_generation_usage.py
docs/: ARCHITECTURE.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/layout/: BottomNav.jsx  MobileHeader.jsx  Sidebar.jsx
frontend/src/components/ui/: ActivityHeatmap.jsx  BookmarkButton.jsx  CacheTag.jsx  Confetti.jsx  ConfigPanel.jsx  CountUp.jsx  DifficultyTag.jsx  EmptyState.jsx  ErrorBoundary.jsx  ErrorState.jsx  GamifyLayer.jsx  GeneratingState.jsx  Icon.jsx  LoadingState.jsx  ProgressCharts.jsx  Stele.jsx  SubjectChips.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useGenerationWS.js
frontend/src/lib/: askTutor.js  curriculum.js  gamification.js  genStorage.js  progressSync.js  theme.js
frontend/src/pages/: Chat.jsx  Flashcards.jsx  History.jsx  Home.jsx  Login.jsx  MCQ.jsx  MockExam.jsx  NotFound.jsx  Notes.jsx  PastExams.jsx  Review.jsx
frontend/src/services/: analytics.service.js  apiClient.js  bookmarks.service.js  chat.service.js  evaluation.service.js  flashcards.service.js  history.service.js  mcq.service.js  mistakes.service.js  notes.service.js
tests/e2e/: conftest.py  test_flashcard_flow.py
tests/integration/api/: test_flashcards_route.py  test_mcq_route.py  test_notes_route.py
tests/integration/db/: test_crud_chat.py  test_crud_generations.py  test_crud_users.py
tests/unit/agents/: test_validation_agent.py
tests/unit/auth/: test_google.py
tests/unit/services/: test_cache.py
