[project]
name = "smartstudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "lxml>=6.1.1",
    "pdf2image>=1.17.0",
    "pymilvus>=3.0.0",
    "pypdf>=6.12.2",
    "pytesseract>=0.3.13",
]
