[project]
name = "smartstudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-ollama>=1.1.0",
    "lxml>=6.1.1",
    "pdf2image>=1.17.0",
    "pydantic-settings>=2.7.0",
    "pymilvus>=3.0.0",
    "pypdf>=6.12.2",
    "pytesseract>=0.3.13",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
]
