[project]
name = "smartstudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.0",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-deepseek>=1.1.0",
    "langchain-ollama>=1.1.0",
    "lxml>=6.1.1",
    "pdf2image>=1.17.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "pymilvus>=3.0.0",
    "pypdf>=6.12.2",
    "pytesseract>=0.3.13",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "factory-boy>=3.3.0",
    "testcontainers[postgresql]>=4.8.0",
    "respx>=0.21.0",
    "freezegun>=1.5.0",
    "psycopg2-binary>=2.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "unit: pure logic tests, no I/O",
    "integration: real DB, mocked external services",
    "e2e: full flow tests",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/utils/scraper.py", "app/utils/dataloader.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
